force-app/main/default/objects/Ticket_Routing_Config__mdt/Ticket_Routing_Config__mdt.object-meta.xml
<CustomObject>
    <label>Ticket Routing Config</label>
    <pluralLabel>Ticket Routing Configs</pluralLabel>
</CustomObject>