force-app/main/default/objects/Ticket_Routing_Config__mdt/fields/QueueToAssign__c.field-meta.xml
<CustomField>
    <fullName>QueueToAssign__c</fullName>
    <label>QueueToAssign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>