force-app/main/default/objects/Ticket_Routing_Config__mdt/fields/RecordType_API_Name__c.field-meta.xml
<CustomField>
    <fullName>RecordType_API_Name__c</fullName>
    <label>RecordType API Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>