force-app/main/default/objects/Ticket_Routing_Config__mdt/fields/RouteToTier2__c.field-meta.xml
<CustomField>
    <fullName>RouteToTier2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RouteToTier2</label>
    <type>Checkbox</type>
</CustomField>