force-app/main/default/objects/Ticket_Routing_Config__mdt/fields/ToEmailAddress__c.field-meta.xml
<CustomField>
    <fullName>ToEmailAddress__c</fullName>
    <label>ToEmailAddress</label>
    <required>true</required>
    <type>Email</type>
</CustomField>